--- a/index.html
+++ b/index.html
@@ -4,15 +4,65 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <meta name="viewport" content="width=device-width. initial-scale=1">
-    <title>Bootstrap- projekt startowy</title>
+    <title>Macopedia - TASK 2</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <script src="js/respond.min.js"></script>
 
 </head>
 <body>
+
+
+
+
+
+<div class="container meet">
+    <p class="meet__title__top">Who we are</p>
+    <p class="meet__title__middle">MEET OUR TEAM</p>
+    <div class="row">
+        <img class="meet__rectangle" src="img/pictograms/meet_rectangle.png"/>
+    </div>
+
+    <div class="row">
+        <span class="meet__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim </br>veniam, quis
+            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+    </div>
+
+    <div class="row meet__team">
+       <div class="col-sm-4 col-xs-12">
+           <div class="row">
+               <div class="meet__team__img"><img src="img/meet_img_1.png"/></div>
+           </div>
+           <div class="row meet__team__name">MATTEW DIX</div>
+           <div class="row meet__team__work">Graphic Design</div>
+       </div>
+       <div class="col-sm-4 col-xs-12">
+           <div class="row">
+               <div class="meet__team__img"><img src="img/meet_img_2.png"/></div>
+           </div>
+           <div class="row meet__team__name">CHRISTOPHER CAMPBELL</div>
+           <div class="row meet__team__work">Branding/UX design</div>
+       </div>
+       <div class="col-sm-4 col-xs-12">
+           <div class="row">
+               <div class="meet__team__img"><img src="img/meet_img_3.png"/></div>
+           </div>
+           <div class="row meet__team__name">MICHAEL FERTIG</div>
+           <div class="row meet__team__work">Developer</div>
+       </div>
+    </div>
+</div>
+
+
+
+<div class="container-fluid logos">
+    <img src="img/logo.png"/>
+</div>
+
+
 <script src="jquery/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
