--- a/index.html
+++ b/index.html
@@ -62,6 +62,50 @@
     <img src="img/logo.png"/>
 </div>
 
+<div class="container-fluid work">
+    <p class="work__title__top">What we do</p>
+    <p class="work__title__middle">SOME OF OUR WORK</p>
+    <div class="row">
+        <img class="work_rectangle" src="img/pictograms/meet_rectangle.png"/>
+    </div>
+    <div class="row">
+        <span class="work__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim</br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat.</span>
+    </div>
+
+    <div class="row work__picture">
+        <div class="col-sm-3 col-xs-6">
+            <img src="img/work11.png"/>
+            <img src="img/work12.png"/>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+            <img src="img/work21.png"/>
+            <img src="img/work22.png"/>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+            <img src="img/work3.png"/>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+            <img src="img/work_41.png"/>
+            <img src="img/work_42.png"/>
+        </div>
+    </div>
+    <!--<div class="row work__picture__bottom">
+        <div class="col-sm-3 col-xs-6">
+            <img src="img/work12.png"/>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+            <img src="img/work22.png"/>
+        </div>
+        <div class="col-md-3 col-xs-6"></div>
+        <div class="col-sm-3 col-xs-6">
+            <img src="img/work_42.png"/>
+        </div>
+    </div>-->
+</div>
+
+
+
 
 <script src="jquery/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
