--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
     <script src="js/respond.min.js"></script>
 
 </head>
@@ -75,33 +76,59 @@
 
     <div class="row work__picture">
         <div class="col-sm-3 col-xs-6">
-            <img src="img/work11.png"/>
-            <img src="img/work12.png"/>
+            <div class="work__picture__overlay">
+                <img src="img/work11.png"/>
+                <img class="work__picture__small" src="img/pictograms/work_22_picture.png"/>
+                <p class="work__picture__text__bold">CREATIVELY DESIGNED</p>
+                <p class="work__picture__text__small">Lorem ipsum dolar sit</p>
+            </div>
+            <div class="work__picture__overlay work__picture__bottom">
+                <img src="img/work12.png"/>
+                <img class="work__picture__small" src="img/pictograms/work_22_picture.png"/>
+                <p class="work__picture__text__bold">CREATIVELY DESIGNED</p>
+                <p class="work__picture__text__small">Lorem ipsum dolar sit</p>
+            </div>
         </div>
         <div class="col-sm-3 col-xs-6">
-            <img src="img/work21.png"/>
-            <img src="img/work22.png"/>
+
+            <div class="work__picture__overlay">
+                <img src="img/work21.png"/>
+                <img class="work__picture__small" src="img/pictograms/work_22_picture.png"/>
+                <p class="work__picture__text__bold">CREATIVELY DESIGNED</p>
+                <p class="work__picture__text__small">Lorem ipsum dolar sit</p>
+            </div>
+
+            <div class="work__picture__overlay  work__picture__bottom">
+                <img src="img/work22.png"/>
+                <img class="work__picture__small" src="img/pictograms/work_22_picture.png"/>
+                <p class="work__picture__text__bold">CREATIVELY DESIGNED</p>
+                <p class="work__picture__text__small">Lorem ipsum dolar sit</p>
+            </div>
         </div>
         <div class="col-sm-3 col-xs-6">
-            <img src="img/work3.png"/>
+            <div class="work__picture__overlay">
+                <img src="img/work3.png"/>
+                <img class="work__picture__small  work__picture__small__three" src="img/pictograms/work_22_picture.png"/>
+                <p class="work__picture__text__bold  work__picture__text__bold__three">CREATIVELY DESIGNED</p>
+                <p class="work__picture__text__small work__picture__text__small__three">Lorem ipsum dolar sit</p>
+            </div>
         </div>
         <div class="col-sm-3 col-xs-6">
-            <img src="img/work_41.png"/>
-            <img src="img/work_42.png"/>
+            <div class="work__picture__overlay">
+                <img src="img/work_41.png"/>
+                <img class="work__picture__small" src="img/pictograms/work_22_picture.png"/>
+                <p class="work__picture__text__bold">CREATIVELY DESIGNED</p>
+                <p class="work__picture__text__small">Lorem ipsum dolar sit</p>
+            </div>
+
+            <div class="work__picture__overlay  work__picture__bottom">
+                <img src="img/work_42.png"/>
+                <img class="work__picture__small" src="img/pictograms/work_22_picture.png"/>
+                <p class="work__picture__text__bold">CREATIVELY DESIGNED</p>
+                <p class="work__picture__text__small">Lorem ipsum dolar sit</p>
+            </div>
         </div>
     </div>
-    <!--<div class="row work__picture__bottom">
-        <div class="col-sm-3 col-xs-6">
-            <img src="img/work12.png"/>
-        </div>
-        <div class="col-sm-3 col-xs-6">
-            <img src="img/work22.png"/>
-        </div>
-        <div class="col-md-3 col-xs-6"></div>
-        <div class="col-sm-3 col-xs-6">
-            <img src="img/work_42.png"/>
-        </div>
-    </div>-->
 </div>
 
 
