--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <img src="img/logo.png"/>
 </div>
 
-<div class="container-fluid work">
+<div class="container-fluid work" id="work">
     <p class="work__title__top">What we do</p>
     <p class="work__title__middle">SOME OF OUR WORK</p>
     <div class="row">
