--- a/index.html
+++ b/index.html
@@ -210,7 +210,28 @@
 
 
 <div class="container-fluid logos">
-    <img src="img/logo.png"/>
+    <div class="container">
+         <div class="row logos__row">
+             <div class="col-md-2 col-xs-4">
+                 <img src="img/logo1.png"/>
+             </div>
+             <div class="col-md-2 col-xs-4">
+                 <img src="img/logo2.png"/>
+             </div>
+             <div class="col-md-2 col-xs-4">
+                 <img src="img/logo3.png"/>
+             </div>
+             <div class="col-md-2 col-xs-4">
+                 <img src="img/logo4.png"/>
+             </div>
+             <div class="col-md-2 col-xs-4">
+                 <img src="img/logo5.png"/>
+             </div>
+             <div class="col-md-2 col-xs-4">
+                 <img src="img/logo6.png"/>
+             </div>
+         </div>
+    </div>
 </div>
 
 <div class="container-fluid work" id="work">
