Read WHAT PEOPLE SAY

--- a/index.html
+++ b/index.html
@@ -169,22 +169,42 @@
             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
     </div>
 
-    <div class="row meet__team">
+    <div class="row">
        <div class="col-sm-4 col-xs-12">
-           <div class="row">
-               <div class="meet__team__img">
+
+           <div class="row  meet__team">
+
+               <figure class="meet__team--one">
                    <img src="img/meet_img_1.png"/>
-                   <div class="meet__team__img__small">
-                       <!--<img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
-                       <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
-                       <img class="meet__team__img__small--2"src="img/pictograms/meet_pinterest.png"/>
-                       <img class="meet__team__img__small--2"src="img/pictograms/meet_instagram.png"/>-->
-                   </div>
+                   <figcaption>
+                       <div class="meet__team--one--pictogram">
+                       <img class="meet__team--one--pictogram--1"src="img/pictograms/meet_facebook.png"/>
+                       <img class="meet__team--one--pictogram--2"src="img/pictograms/meet_twitter.png"/>
+                       <img class="meet__team--one--pictogram--2"src="img/pictograms/meet_pinterest.png"/>
+                       <img class="meet__team--one--pictogram--2"src="img/pictograms/meet_instagram.png"/>
+                       </div>
+                   </figcaption>
+               </figure>
+               <!--<div class="meet__team--back"></div>
+               <div class="meet__team--img">
+                   <img src="img/meet_img_1.png"/>
                </div>
+               <div class="meet__team--top"></div>
+
+
+               <!--<div class="meet__team__img__small">
+                   <img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
+                   <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
+                   <img class="meet__team__img__small--2"src="img/pictograms/meet_pinterest.png"/>
+                   <img class="meet__team__img__small--2"src="img/pictograms/meet_instagram.png"/>
+                   </div>
+               </div>-->
+
            </div>
-           <div class="row meet__team__name">MATTEW DIX</div>
-           <div class="row meet__team__work">Graphic Design</div>
-       </div>
+
+           <!--<div class="row meet__team__name">MATTEW DIX</div>
+           <div class="row meet__team__work">Graphic Design</div> -->
+    </div>
        <div class="col-sm-4 col-xs-12">
            <div class="row">
                <div class="meet__team__img">
@@ -304,6 +324,103 @@
 
 
 
+
+
+
+
+
+
+
+<div class="container-fluid say">
+    <img class="say--back" src="img/people_back.png"/>
+    <div class="say__title">
+        <p class="say__title--top">Happy Clients</p>
+        <p class="say__title--middle">WHAT PEOPLE SAY</p>
+        <img class="say__title--rectangle"src="img/pictograms/meet_rectangle.png"/>
+    </div>
+
+    <div class="row say__client">
+            <div class="col-md-1"></div>
+            <div class="col-md-1 col-xs-4 say__client--img">
+                <img src="img/people1.png"/>
+            </div>
+            <div class="col-md-3 col-xs-8">
+                <div class="row say__client--name">
+                    <span>MATTHEW DIX</span>
+                </div>
+                <div class="row say__client--job">
+                    <span>Graphic Design</span>
+                </div>
+                <div class="row">
+                    <img src="img/pictograms/meet_rectangle.png"/>
+                </div>
+                <div class="row say__client--text">
+                    <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
+                </div>
+            </div>
+        <div class="col-md-1"></div>
+            <div class="col-md-1 col-xs-4 say__client--img">
+                <img src="img/people2.png"/>
+            </div>
+            <div class="col-md-3 col-xs-8">
+                <div class="row say__client--name">
+                    <span>NICK KARVOUNIS</span>
+                </div>
+                <div class="row say__client--job">
+                    <span>Graphic Design</span>
+                </div>
+                <div class="row">
+                    <img src="img/pictograms/meet_rectangle.png"/>
+                </div>
+                <div class="row say__client--text">
+                    <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
+                </div>
+            </div>
+
+    </div>
+    <div class="row say__client">
+        <div class="col-md-1"></div>
+        <div class="col-md-1 col-xs-4 say__client--img">
+            <img src="img/people3.png"/>
+        </div>
+        <div class="col-md-3 col-xs-8">
+            <div class="row say__client--name">
+                <span>JAELYNN CASTILLO</span>
+            </div>
+            <div class="row say__client--job">
+                <span>Graphic Design</span>
+            </div>
+            <div class="row">
+                <img src="img/pictograms/meet_rectangle.png"/>
+            </div>
+            <div class="row say__client--text">
+                <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
+            </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-1 col-xs-4 say__client--img">
+            <img src="img/people4.png"/>
+        </div>
+        <div class="col-md-3 col-xs-8">
+            <div class="row say__client--name">
+                <span>MIKE PETRUCCI</span>
+            </div>
+            <div class="row say__client--job">
+                <span>Graphic Design</span>
+            </div>
+            <div class="row">
+                <img src="img/pictograms/meet_rectangle.png"/>
+            </div>
+            <div class="row say__client--text">
+                <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
+            </div>
+        </div>
+
+    </div>
+
+
+
+</div>
 
 <script src="jquery/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
