--- a/index.html
+++ b/index.html
@@ -415,12 +415,81 @@
                 <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
             </div>
         </div>
+    </div>
+</div>
 
+
+<div class="container blog">
+    <div class="blog__title">
+        <p class="blog__title--top">Our stories</p>
+        <p class="blog__title--middle">LATEST BLOG</p>
+        <img class="blog__title--rectangle"src="img/pictograms/meet_rectangle.png"/>
     </div>
 
+    <div class="row blog__img">
+        <div class="col-md-4 col-xs-12 blog__img--margin--1">
+            <figure class="row blog__img--img">
+                <img src="img/blog1.png"/>
+                <figcaption>
+                    <p class="blog__img--img--1">15</p>
+                    <p class="blog__img--img--2">Jan</p>
+                </figcaption>
+            </figure>
+            <p class="blog__img--top">LOREM IPSUM DOLOR SIT AMET</p>
+            <p class="blog__img--middle">Consectetur adipiscing elit, sed do siusmod tempor incisunt ut labore et dolore magna aliqua.</p>
+            <img class="blog__img--line" src="img/blog_line.png"/>
+            <div class="row blog__img--pictograms">
+                <img src="img/pictograms/blog_view.png">
+                <span>542</span>
+                <img src="img/pictograms/blog_speech.png">
+                <span>17</span>
+            </div>
+        </div>
 
+        <div class="col-md-4 col-xs-12  blog__img--margin--2">
+            <figure class="row blog__img--img">
+                <img src="img/blog2.png"/>
+                <figcaption>
+                    <p class="blog__img--img--1">14</p>
+                    <p class="blog__img--img--2">Jan</p>
+                </figcaption>
+            </figure>
+            <p class="blog__img--top">SED DO EIUSMOD TEMPOR</p>
+            <p class="blog__img--middle">Consectetur adipiscing elit, sed do siusmod tempor incisunt ut labore et dolore magna aliqua.</p>
+            <img class="blog__img--line" src="img/blog_line.png"/>
+            <div class="row blog__img--pictograms">
+                <img src="img/pictograms/blog_view.png">
+                <span>992</span>
+                <img src="img/pictograms/blog_speech.png">
+                <span>42</span>
+            </div>
+        </div>
 
+        <div class="col-md-4 col-xs-12 blog__img--margin--2">
+            <figure class="row blog__img--img">
+                <img src="img/blog3.png"/>
+                <figcaption>
+                    <p class="blog__img--img--1">12</p>
+                    <p class="blog__img--img--2">Jan</p>
+                </figcaption>
+            </figure>
+            <p class="blog__img--top">INCIDIDUNT UT LABORE ET DOLORE</p>
+            <p class="blog__img--middle">Consectetur adipiscing elit, sed do siusmod tempor incisunt ut labore et dolore magna aliqua.</p>
+            <img class="blog__img--line" src="img/blog_line.png"/>
+            <div class="row blog__img--pictograms">
+                <img src="img/pictograms/blog_view.png">
+                <span>1560</span>
+                <img src="img/pictograms/blog_speech.png">
+                <span>98</span>
+            </div>
+        </div>
+    </div>
 </div>
+
+
+
+
+
 
 <script src="jquery/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
