--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 
 
-<div class="container meet">
+    <div class="container meet">
     <p class="meet__title__top">Who we are</p>
     <p class="meet__title__middle">MEET OUR TEAM</p>
     <div class="row">
@@ -229,7 +229,7 @@
 
 
 
-<div class="container-fluid logos">
+    <div class="container-fluid logos">
     <div class="container">
          <div class="row logos__row">
              <div class="col-md-2 col-xs-4">
@@ -254,7 +254,7 @@
     </div>
 </div>
 
-<div class="container-fluid work" id="work">
+    <div class="container-fluid work" id="work">
     <p class="work__title__top">What we do</p>
     <p class="work__title__middle">SOME OF OUR WORK</p>
     <div class="row">
@@ -323,15 +323,7 @@
 </div>
 
 
-
-
-
-
-
-
-
-
-<div class="container-fluid say">
+    <div class="container-fluid say">
     <img class="say--back" src="img/people_back.png"/>
     <div class="say__title">
         <p class="say__title--top">Happy Clients</p>
@@ -419,7 +411,7 @@
 </div>
 
 
-<div class="container blog">
+    <div class="container blog">
     <div class="blog__title">
         <p class="blog__title--top">Our stories</p>
         <p class="blog__title--middle">LATEST BLOG</p>
@@ -486,6 +478,15 @@
     </div>
 </div>
 
+
+    <div class="container-fluid map">
+        <img class="map--back"/>
+        <div class="map__inside">
+            <img class="map__inside--pictogram" src="img/pictograms/map_1.png"/>
+            <p class="map__inside--text">OPEN MAP</p>
+            <img class="map__inside--rectangle" src="img/pictograms/meet_rectangle.png"/>
+        </div>
+    </div>
 
 
 
