--- a/index.html
+++ b/index.html
@@ -410,7 +410,6 @@
     </div>
 </div>
 
-
     <div class="container blog">
     <div class="blog__title">
         <p class="blog__title--top">Our stories</p>
@@ -478,7 +477,6 @@
     </div>
 </div>
 
-
     <div class="container-fluid map">
         <img class="map--back"/>
         <div class="map__inside">
@@ -489,7 +487,100 @@
     </div>
 
 
+<footer class="container-fluid foot">
+    <div class="container">
+        <div class="col-md-4 col-sm-12 foot__1">
+            <p class="foot__1--logo">MoGo</p>
+            <p class="foot__1--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrus exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat</p>
+            <div class="row foot__1--users">
+                <span class="foot__1--users--number">15k</span>
+                <span class="foot__1--users--user">followers</span>
+            </div>
+            <img class="foot__1--line"src="img/blog_line.png"/>
+            <div class="row foot__1--site">
+                <span class="foot__1--site--text">Follow Us: </span>
+                <img src="img/pictograms/foot_facebook.png"/>
+                <img src="img/pictograms/foot_twitter.png"/>
+                <img src="img/pictograms/foot_instagram.png"/>
+                <img src="img/pictograms/foot_pinterest.png"/>
+                <img src="img/pictograms/foot_google.png"/>
+                <img src="img/pictograms/foot_youtube.png"/>
+                <img src="img/pictograms/foot_dribbble.png"/>
+                <img src="img/pictograms/foot_tumblr.png"/>
+            </div>
+            <form>
+                <input type="text" id="sub" name="sub" placeholder="Your Email...">
+                <input type="submit" value="SUBSCRIBE">
+            </form>
+        </div>
 
+        <div class="col-md-4 col-sm-12 foot__2">
+            <p class="foot__2--title">BLOGS</p>
+            <div class="row foot__2--row">
+                <div class="col-xs-5">
+                    <img src="img/foot_blog_1.png"/>
+                </div>
+                <div class="col-xs-7 foot__2--row--text">
+                    <p class="foot__2--row--text--long">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
+                    <p class="foot__2--row--text--data">Jan 9,2016</p>
+                </div>
+            </div>
+
+            <div class="row foot__2--row">
+                <div class="col-xs-5">
+                    <img src="img/foot_blog_2.png"/>
+                </div>
+                <div class="col-xs-7 foot__2--row--text">
+                    <p class="foot__2--row--text--long">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
+                    <p class="foot__2--row--text--data">Jan 9,2016</p>
+                </div>
+            </div>
+
+            <div class="row foot__2--row">
+                <div class="col-xs-5">
+                    <img src="img/foot_blog_3.png"/>
+                </div>
+                <div class="col-xs-7 foot__2--row--text">
+                    <p class="foot__2--row--text--long">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
+                    <p class="foot__2--row--text--data">Jan 9,2016</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-sm-12 foot__3">
+            <p class="foot__3--title">INSTAGRAM</p>
+
+            <div class="foot__3--insta">
+                <div class="row">
+                    <img src="img/foot_inst_1.png"/>
+                    <img src="img/foot_inst_2.png"/>
+                    <img src="img/foot_inst_3.png"/>
+                </div>
+
+                <div class="row">
+                    <img src="img/foot_inst_4.png"/>
+                    <img src="img/foot_inst_5.png"/>
+                    <img src="img/foot_inst_6.png"/>
+                </div>
+
+                <div class="row">
+                    <img src="img/foot_inst_7.png"/>
+                    <img src="img/foot_inst_8.png"/>
+                    <img src="img/foot_inst_9.png"/>
+                </div>
+            </div>
+            <p class="foot__3--text">View more photos</p>
+
+        </div>
+
+        <img class="foot__3--line" src="img/foot_line.png"/>
+
+        <div class="foot__3--foot">
+            MoGo free PSD template by <span class="foot__3--foot--color">Laaqiq</span>
+        </div>
+
+    </div>
+</footer>
 
 
 <script src="jquery/jquery.min.js"></script>
