--- a/index.html
+++ b/index.html
@@ -322,7 +322,73 @@
     </div>
 </div>
 
+<div class="container testimontial">
 
+    <div class="row testimontial__slider">
+        <div class="col-xs-2 testimontial__slider--left" onclick="plus(-1)">
+            <img src="img/pictograms/testimontial_arrowleft.png"/>
+        </div>
+
+        <div class="testimontial__slider--page">
+            <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
+                <img src="img/testimontial_1.png"/>
+            </div>
+            <div class="col-sm-7 col-xs-10">
+                <div class="row testimontial__slider--page--text">
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboer et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
+                </div>
+                <div class="row testimontial__slider--page--name">
+                    <img src="img/pictograms/meet_rectangle.png"/>
+                    <span class="testimontial__slider--page--name--name">Joshua Earle</span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="testimontial__slider--page">
+            <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
+                <img src="img/testimontial_1.png"/>
+            </div>
+            <div class="col-sm-7 col-xs-10">
+                <div class="row testimontial__slider--page--text">
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce venenatis ullamcorper malesuada. Aliquam non lorem a sapien malesuada venenatis. Ut a metus velit. Quisque viverra augue."
+                </div>
+                <div class="row testimontial__slider--page--name">
+                    <img src="img/pictograms/meet_rectangle.png"/>
+                    <span class="testimontial__slider--page--name--name">Joshua Earle 2</span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="testimontial__slider--page">
+            <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
+                <img src="img/testimontial_1.png"/>
+            </div>
+            <div class="col-sm-7 col-xs-10">
+                <div class="row testimontial__slider--page--text">
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fermentum condimentum iaculis. Vestibulum sed purus suscipit, suscipit massa vitae, rutrum quam. Vivamus vehicula ornare tincidunt. Mauris dictum rutrum."
+                </div>
+                <div class="row testimontial__slider--page--name">
+                    <img src="img/pictograms/meet_rectangle.png"/>
+                    <span class="testimontial__slider--page--name--name">Joshua Earle 3</span>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="col-xs-1 testimontial__slider--right" onclick="plus(1)">
+            <img src="img/pictograms/testimontial_arrowright.png"/>
+        </div>
+    </div>
+
+
+
+
+
+
+</div>
     <div class="container-fluid say">
     <img class="say--back" src="img/people_back.png"/>
     <div class="say__title">
@@ -588,7 +654,7 @@
 <script src="js/jquery.easing.min.js"></script>
 <script src="js/scrollingNav.js"></script>
 <script src="js/counters.js"></script>
-
+<script src="js/slider.js"></script>
 
 </body>
 </html>
