design section done

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="page-scroll" href="#about">About</a>
             </li>
             <li class="">
-              <a class="page-scroll" href="#service">Service</a>
+              <a class="page-scroll" href="#services">Service</a>
             </li>
             <li class="">
               <a class="page-scroll" href="#work">Work</a>
@@ -275,6 +275,31 @@
       </div>
     </div>
 
+    <div class="container-fluid" id="design">
+      <div class="row text-center design__intro">
+        <div class="col-xs-12">
+
+            <img class="design__bg" />
+          <div class="design__intro__text--first">
+            For all devices
+          </div>
+          <div class="design__intro__text--second">
+            Unique design
+          </div>
+          <span class="design__intro__bar"></span></br>
+          <div class="design__intro__image row">
+            <div class="col-xs-12 tablet">
+              <img src="img/feature_tablet.png" class="img-responsive" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row design__phone">
+        <div class="col-xs-12 design__phone__img">
+          <img src="img/feature_phone.png" class="img-responsive" alt="">
+        </div>
+      </div>
+    </div>
 
 
     <div class="container meet">
