service section done

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="row text-center design__intro">
         <div class="col-xs-12">
 
-            <img class="design__bg" />
+          <img class="design__bg" />
           <div class="design__intro__text--first">
             For all devices
           </div>
@@ -300,6 +300,84 @@
         </div>
       </div>
     </div>
+
+    <div class="container-fluid" id="service">
+      <div class="row text-center service__info">
+        <div class="col-xs-12">
+          <div class="service__info--first">
+            Service
+          </div>
+          <div class="service__info--second">
+            What we do
+          </div>
+          <span class="service__info__bar"></span></br>
+          <div class="service__info--text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </div>
+        </div>
+      </div>
+      <div class="row service__details">
+        <div class="col-xs-12 col-sm-12 col-md-6 service__details__photo">
+          <img src="img/service2_img.png" class="img-responsive" alt="">
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 service__details__accordion">
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                <img src="img/pictograms/service2_pic1.png" alt="">Photography
+                            </a>
+                        </h4>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin facilisis sodales sapien, a ornare quam feugiat eu. In hac habitasse platea dictumst. Curabitur sed vehicula justo, eget mollis odio. Phasellus sagittis pulvinar lorem, non malesuada ligula
+                  scelerisque ut. Vestibulum iaculis nunc eu purus mattis tincidunt. Integer suscipit ipsum laoreet ex commodo egestas. In tellus nisi, rhoncus porttitor felis id, molestie placerat mi. In non dolor erat. Etiam scelerisque enim ac lectus
+                  cursus, et eleifend justo tempor.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                <img src="img/pictograms/service2_pic2.png" alt="">Creativity
+                            </a>
+                        </h4>
+              </div>
+              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin facilisis sodales sapien, a ornare quam feugiat eu. In hac habitasse platea dictumst. Curabitur sed vehicula justo, eget mollis odio. Phasellus sagittis pulvinar lorem, non malesuada ligula
+                  scelerisque ut. Vestibulum iaculis nunc eu purus mattis tincidunt. Integer suscipit ipsum laoreet ex commodo egestas. In tellus nisi, rhoncus porttitor felis id, molestie placerat mi. In non dolor erat. Etiam scelerisque enim ac lectus
+                  cursus, et eleifend justo tempor.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingThree">
+                <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <img src="img/pictograms/service2_pic3.png" alt="">Web design
+                            </a>
+                        </h4>
+              </div>
+              <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin facilisis sodales sapien, a ornare quam feugiat eu. In hac habitasse platea dictumst. Curabitur sed vehicula justo, eget mollis odio. Phasellus sagittis pulvinar lorem, non malesuada ligula
+                  scelerisque ut. Vestibulum iaculis nunc eu purus mattis tincidunt. Integer suscipit ipsum laoreet ex commodo egestas. In tellus nisi, rhoncus porttitor felis id, molestie placerat mi. In non dolor erat. Etiam scelerisque enim ac lectus
+                  cursus, et eleifend justo tempor.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+
 
 
     <div class="container meet">
@@ -435,6 +513,7 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrollingNav.js"></script>
     <script src="js/counters.js"></script>
+    <script src="js/accordion.js"></script>
 
 
   </body>
